# Enterprise-RAG-Platform

./: .gitignore  CLAUDE.md  README.md  enterprise-rag-master-build-prompt.md  pyproject.toml
.github/workflows/: ci.yml
config/: models.yaml
config/policies/: README.md  cache.yaml  chunking.yaml  context.yaml  embedding.yaml  guardrail_profile.yaml  language.yaml  model_router.yaml  parser.yaml  query.yaml  rerank.yaml
config/prompts/bfsi/: retrieval-qa.yaml
config/prompts/common/: reasoning.yaml  retrieval-qa.yaml  structured-output.yaml  summarization.yaml
config/prompts/healthcare/: retrieval-qa.yaml
config/prompts/retail/: retrieval-qa.yaml
docs/: ARCHITECTURE.md  E2E-SMOKE.md  GAP-MATRIX.md  PROGRESS.md  RETROFIT-AUDIT.md
docs/adr/: 0001-architecture.md
infra/: docker-compose.dev.yml
libs/connectors/: pyproject.toml
libs/connectors/src/connectors/: erasure.py  parser_policy.py  parser_registry.py
libs/connectors/src/connectors/embeddings/: cohere_provider.py  openai_provider.py  sentence_transformers_provider.py
libs/connectors/src/connectors/graph/: postgres_knowledge_graph.py  spacy_extractor.py
libs/connectors/src/connectors/guardrails/: guardrail_profile.py  output_policy_guardrail.py  presidio_guardrail.py  prompt_injection_guardrail.py
libs/connectors/src/connectors/keyword/: client.py  opensearch_index.py
libs/connectors/src/connectors/llm/: anthropic_provider.py  openai_provider.py
libs/connectors/src/connectors/parsers/: email_parser.py  ocr_tesseract.py  password_check.py  plain_text_parser.py  stt_faster_whisper.py  unstructured_parser.py
libs/connectors/src/connectors/postgres/: orm.py  repository.py  session.py
libs/connectors/src/connectors/rerankers/: cohere_reranker.py  cross_encoder_reranker.py
libs/connectors/src/connectors/sources/: blob_connector.py  sharepoint_connector.py
libs/connectors/src/connectors/vectorstores/: client.py  errors.py  migrations.py  pgvector_store.py  qdrant_store.py
libs/core/: pyproject.toml
libs/core/src/core/: interfaces.py  middleware.py  model_registry.py  models.py  policy_engine.py  prompt_registry.py  tenant_context.py
libs/observability/: pyproject.toml
libs/observability/src/observability/: __init__.py  logging.py
services/embedding/: pyproject.toml
services/embedding/src/embedding/: embedding_policy.py  main.py  queue.py  reembed.py  worker.py
services/gateway/: pyproject.toml
services/gateway/src/gateway/: __init__.py  main.py
services/gateway/src/gateway/middleware/: tenant_context.py
services/ingestion/: pyproject.toml
services/ingestion/src/ingestion/: api.py  dedupe.py  main.py  queue.py  storage.py  sync.py  worker.py
services/orchestrator/: pyproject.toml
services/orchestrator/src/orchestrator/: api.py  cache_policy.py  citations.py  complexity.py  context_policy.py  guardrail_pipeline.py  main.py  model_router.py  pipeline.py  semantic_cache.py  settings.py
services/preprocessing/: pyproject.toml
services/preprocessing/src/preprocessing/: __init__.py  chunking_policy.py  cleaning.py  language_detect.py  language_policy.py  metadata.py  pipeline.py  tokenization.py  translator_stub.py
services/preprocessing/src/preprocessing/chunkers/: fixed_size.py  structure_aware.py
services/retrieval/: pyproject.toml
services/retrieval/src/retrieval/: __init__.py  api.py  chunk_tuning.py  eval.py  filters.py  hybrid.py  main.py  multi_hop.py  pipeline.py  query_policy.py  query_understanding.py  rerank_policy.py  settings.py
tests/fixtures/: adversarial_queries.yaml  adversarial_queries_loader.py
tests/fixtures/documents/: sample.csv  sample.docx  sample.eml  sample.html  sample.json  sample.md  sample.pptx  sample.txt  sample.xlsx  sample.xml  sample_arabic.txt  sample_chinese.txt  sample_hindi.txt  sample_legacy_encoding.txt  sample_mixed_en_ar.html
tests/fixtures/eval_corpus/: documents.yaml  golden_queries.yaml  loader.py
tests/fixtures/policies/: example_policy.yaml  malformed_rule_policy.yaml  malformed_syntax_policy.yaml  no_match_policy.yaml
tests/fixtures/scripts/: generate_fixtures.py  openai_compatible_stub.py
tests/integration/: conftest.py  test_chunking_auto_tuning.py  test_conversation_memory.py  test_embed_job_enqueued_after_parse.py  test_embedding_e2e.py  test_embedding_idempotency.py  test_embedding_tenant_isolation.py  test_graphrag_extraction.py  test_ingestion_e2e.py  test_multilingual_ingestion.py  test_orchestrator_e2e.py  test_reembed_cutover.py  test_retrieval_e2e.py  test_retrieval_eval_harness.py  test_retrieval_filters.py  test_retrieval_tenant_isolation.py  test_tenant_isolation.py  test_versioning.py
tests/unit/config/: test_models_registry.py
tests/unit/libs/connectors/: test_erasure.py  test_parser_policy.py  test_parser_registry.py
tests/unit/libs/core/: test_interfaces.py  test_middleware.py  test_model_registry.py  test_models.py  test_policy_engine.py  test_prompt_registry.py  test_tenant_context.py
tests/unit/libs/observability/: test_logging.py
tests/unit/services/embedding/: test_dlq.py  test_embedding_policy.py  test_main.py  test_reembed.py  test_worker.py
tests/unit/services/gateway/: test_tenant_context.py
tests/unit/services/ingestion/: test_api.py  test_dedupe.py  test_sync.py  test_worker.py
tests/unit/services/orchestrator/: test_adversarial_queries_fixture.py  test_api.py  test_cache_policy.py  test_citations.py  test_complexity.py  test_context_policy.py  test_guardrail_pipeline.py  test_main.py  test_model_router.py  test_per_locale_guardrails.py  test_pipeline.py  test_semantic_cache.py  test_settings.py
tests/unit/services/preprocessing/: test_chunkers.py  test_chunking_policy.py  test_cleaning.py  test_language_detect.py  test_language_policy.py  test_metadata.py  test_pipeline.py  test_translator_stub.py
tests/unit/services/retrieval/: test_api.py  test_eval_corpus_fixtures.py  test_eval_metrics.py  test_filters.py  test_hybrid.py  test_main.py  test_multi_hop.py  test_pipeline.py  test_query_policy.py  test_query_understanding.py  test_rerank_policy.py
(+30 files in other folders)
