[project]
name = "connectors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NagarajYaganti", email = "39370970+NagarajYaganti@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arq==0.28.0",
    "boto3==1.43.51",
    "core",
    "extract-msg==0.56.0",
    "faster-whisper==1.2.1",
    "httpx==0.28.1",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.2",
    "pytesseract==0.3.13",
    "sqlalchemy==2.0.51",
    "unstructured[docx,pdf,pptx,xlsx]==0.24.1",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
core = { workspace = true }
