[project]
name = "connectors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NagarajYaganti", email = "39370970+NagarajYaganti@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.117.0",
    "arq==0.28.0",
    "boto3==1.43.51",
    "cohere==7.0.5",
    "core",
    "en-core-web-sm",
    "extract-msg==0.56.0",
    "faster-whisper==1.2.1",
    "httpx==0.28.1",
    "openai==2.46.0",
    "opensearch-py==3.2.0",
    "pgvector==0.5.0",
    "presidio-analyzer==2.2.363",
    "presidio-anonymizer==2.2.363",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.2",
    "pytesseract==0.3.13",
    "qdrant-client==1.18.0",
    "sentence-transformers==5.6.0",
    "spacy==3.8.13",
    "sqlalchemy==2.0.51",
    "tenacity==9.1.4",
    "unstructured[docx,pdf,pptx,xlsx]==0.24.1",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
core = { workspace = true }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
