[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NagarajYaganti", email = "39370970+NagarajYaganti@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "pyyaml==6.0.3",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
